[gd_scene load_steps=5 format=2]

[ext_resource path="res://environment/grapple_point/grapple_point.gd" type="Script" id=1]
[ext_resource path="res://environment/grapple_point/textures/grapple-points.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "shimmer"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 28 )

[node name="GrapplePoint" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 2 )
hframes = 8
vframes = 8
frame = 6
region_enabled = true
region_rect = Rect2( 0, 0, 128, 128 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/shimmer = SubResource( 1 )

[node name="AttachmentPoint" type="Position2D" parent="."]
position = Vector2( 0, -8 )

[node name="GrappleRangeArea" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrappleRangeArea"]

[node name="NoGrappleArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoGrappleArea"]
position = Vector2( 0, -28 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -4, -8, 8, 8 )

[node name="LaunchGrapplePoints" type="Node2D" parent="."]

[node name="Left" type="Position2D" parent="LaunchGrapplePoints"]
position = Vector2( -8, 0 )

[node name="Right" type="Position2D" parent="LaunchGrapplePoints"]
position = Vector2( 8, 0 )
